fixed jumping href

--- a/src/Pages/Lists/Hiking/hiking.css
+++ b/src/Pages/Lists/Hiking/hiking.css
@@ -31,6 +31,11 @@
     letter-spacing:4px;
 }
 
+.tips h1 {
+    font-size:50px;
+    letter-spacing:4px;
+}
+
 #tips p {
     font-size:20px;
 }
